<resources>
    <string name="app_name">Demo Android</string>
    <string name="success_screen_text">hello</string>
    <string name="input_email_hint">Email</string>
    <string name="input_password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="retry_button_text">Retry</string>
    <string name="password_invalid_message">Please enter at least 1 character</string>
    <string name="email_invalid_message">Please enter a valid email</string>
    <string name="login_auth_error_message">Login failed, wrong email or password.</string>
    <string name="login_server_error_message">Login failed, server error.</string>
    <string name="login_generic_error_message">Login failed, something went wrong.</string>
</resources>
